fix alignments and shrink size

--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
   font-size: 62.5%;
   --text-color: #E1E1E6;
   --but-hover-color: #02789c;
+  height: 100vh;
 }
 
 body, button, a {
@@ -22,7 +23,7 @@ a {
 
 
 body {
-  height: 100vh;
+  /* height: 100vh; */
   background-image: url('./assets/home-bg.png');
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -48,6 +49,7 @@ nav a:hover {
 
 #app {
   padding: 10.2rem;
+  margin-top: 7.2rem;
   height: 100%;
   width: 100%;
 
@@ -66,7 +68,7 @@ h1 {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-items: center;
+  justify-content: center;
   gap: 2.4rem;
 }
 
@@ -109,5 +111,5 @@ h1 {
   font-weight: 400;
   line-height: 2.9rem;
 
-  width: 50%;
+  width: max(50%,35rem);
 }
